puzzle-script/src/main/java/cn/codependency/framework/puzzle/script/core/ast/PuzzleScriptParser.java
// Generated from /Users/echo/Documents/workspace/projects/puzzle/puzzle-script/src/main/java/cn/codependency/framework/puzzle/script/core/antlr/PuzzleScript.g4 by ANTLR 4.13.2

package cn.codependency.framework.puzzle.script.core.ast;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PuzzleScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, IF=6, ELSE_IF=7, ELSE=8, FOR=9, 
		WHEN=10, MAP=11, IN=12, RETURN=13, BREAK=14, CONTINUE=15, DEFAULT=16, 
		NULL_LITERAL=17, BLANK_LINE=18, LPAREN=19, RPAREN=20, LBRACE=21, RBRACE=22, 
		LBRACK=23, RBRACK=24, SEMI=25, COMMA=26, DOT=27, ASSIGN=28, GT=29, LT=30, 
		BANG=31, QUESTION=32, COLON=33, EQUAL=34, LE=35, GE=36, NOTEQUAL=37, AND=38, 
		OR=39, ADD=40, SUB=41, MUL=42, DIV=43, BITAND=44, BITOR=45, CARET=46, 
		MOD=47, AT=48, ADD_ASSIGN=49, SUB_ASSIGN=50, MUL_ASSIGN=51, DIV_ASSIGN=52, 
		AND_ASSIGN=53, OR_ASSIGN=54, XOR_ASSIGN=55, MOD_ASSIGN=56, LSHIFT_ASSIGN=57, 
		RSHIFT_ASSIGN=58, URSHIFT_ASSIGN=59, ARROW=60, IDENTIFIER=61, DECIMAL_LITERAL=62, 
		UN_QUOTED_STRING=63, FLOAT_LITERAL=64, BOOL_LITERAL=65, CHAR_LITERAL=66, 
		STRING_LITERAL=67, TEXT_BLOCK=68, WS=69, COMMENT=70, LINE_COMMENT=71, 
		MINLINE_COMMENT=72;
	public static final int
		RULE_infinite = 0, RULE_headers = 1, RULE_header = 2, RULE_filters = 3, 
		RULE_statements = 4, RULE_statement = 5, RULE_expression = 6, RULE_callFunction = 7, 
		RULE_groupExpr = 8, RULE_callTask = 9, RULE_list = 10, RULE_whenExpression = 11, 
		RULE_whenStatements = 12, RULE_whenThenStatement = 13, RULE_defaultStatement = 14, 
		RULE_parExpression = 15, RULE_whenWopThenStatements = 16, RULE_whenWopThenStatement = 17, 
		RULE_primary = 18, RULE_stringItem = 19, RULE_literal = 20, RULE_integerLiteral = 21, 
		RULE_floatLiteral = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"infinite", "headers", "header", "filters", "statements", "statement", 
			"expression", "callFunction", "groupExpr", "callTask", "list", "whenExpression", 
			"whenStatements", "whenThenStatement", "defaultStatement", "parExpression", 
			"whenWopThenStatements", "whenWopThenStatement", "primary", "stringItem", 
			"literal", "integerLiteral", "floatLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'filters'", "'??'", "'|['", "'not in'", "'=>'", "'if'", null, 
			"'else'", "'for'", "'when'", "'map'", "'in'", "'return'", "'break'", 
			"'continue'", "'default'", "'null'", null, "'('", "')'", "'{'", "'}'", 
			"'['", "']'", "';'", "','", "'.'", "'='", "'>'", "'<'", "'!'", "'?'", 
			"':'", "'=='", "'<='", "'>='", "'!='", "'&&'", "'||'", "'+'", "'-'", 
			"'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'@'", "'+='", "'-='", "'*='", 
			"'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", "'>>>='", "'->'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, "IF", "ELSE_IF", "ELSE", "FOR", "WHEN", 
			"MAP", "IN", "RETURN", "BREAK", "CONTINUE", "DEFAULT", "NULL_LITERAL", 
			"BLANK_LINE", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
			"SEMI", "COMMA", "DOT", "ASSIGN", "GT", "LT", "BANG", "QUESTION", "COLON", 
			"EQUAL", "LE", "GE", "NOTEQUAL", "AND", "OR", "ADD", "SUB", "MUL", "DIV", 
			"BITAND", "BITOR", "CARET", "MOD", "AT", "ADD_ASSIGN", "SUB_ASSIGN", 
			"MUL_ASSIGN", "DIV_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", 
			"MOD_ASSIGN", "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", "URSHIFT_ASSIGN", "ARROW", 
			"IDENTIFIER", "DECIMAL_LITERAL", "UN_QUOTED_STRING", "FLOAT_LITERAL", 
			"BOOL_LITERAL", "CHAR_LITERAL", "STRING_LITERAL", "TEXT_BLOCK", "WS", 
			"COMMENT", "LINE_COMMENT", "MINLINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PuzzleScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PuzzleScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InfiniteContext extends ParserRuleContext {
		public HeadersContext headers() {
			return getRuleContext(HeadersContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PuzzleScriptParser.EOF, 0); }
		public List<TerminalNode> BLANK_LINE() { return getTokens(PuzzleScriptParser.BLANK_LINE); }
		public TerminalNode BLANK_LINE(int i) {
			return getToken(PuzzleScriptParser.BLANK_LINE, i);
		}
		public FiltersContext filters() {
			return getRuleContext(FiltersContext.class,0);
		}
		public InfiniteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_infinite; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PuzzleScriptListener ) ((PuzzleScriptListener)listener).enterInfinite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PuzzleScriptListener ) ((PuzzleScriptListener)listener).exitInfinite(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PuzzleScriptVisitor ) return ((PuzzleScriptVisitor<? extends T>)visitor).visitInfinite(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InfiniteContext infinite() throws RecognitionException {
		InfiniteContext _localctx = new InfiniteContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_infinite);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(46);
					match(BLANK_LINE);
					}
					} 
				}
				setState(51);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(52);
			headers();
			setState(56);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(53);
					match(BLANK_LINE);
					}
					} 
				}
				setState(58);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(59);
				filters();
				}
			}

			setState(65);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(62);
					match(BLANK_LINE);
					}
					} 
				}
				setState(67);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(68);
			statements();
			setState(69);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeadersContext extends ParserRuleContext {
		public List<HeaderContext> header() {
			return getRuleContexts(HeaderContext.class);
		}
		public HeaderContext header(int i) {
			return getRuleContext(HeaderContext.class,i);
		}
		public HeadersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PuzzleScriptListener ) ((PuzzleScriptListener)listener).enterHeaders(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PuzzleScriptListener ) ((PuzzleScriptListener)listener).exitHeaders(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PuzzleScriptVisitor ) return ((PuzzleScriptVisitor<? extends T>)visitor).visitHeaders(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeadersContext headers() throws RecognitionException {
		HeadersContext _localctx = new HeadersContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_headers);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(71);
					header();
					}
					} 
				}
				setState(76);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeaderContext extends ParserRuleContext {
		public Token tag;
		public StringItemContext val;
		public TerminalNode COLON() { return getToken(PuzzleScriptParser.COLON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PuzzleScriptParser.IDENTIFIER, 0); }
		public StringItemContext stringItem() {
			return getRuleContext(StringItemContext.class,0);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PuzzleScriptListener ) ((PuzzleScriptListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PuzzleScriptListener ) ((PuzzleScriptListener)listener).exitHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PuzzleScriptVisitor ) return ((PuzzleScriptVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			((HeaderContext)_localctx).tag = match(IDENTIFIER);
			setState(78);
			match(COLON);
			setState(79);
			((HeaderContext)_localctx).val = stringItem();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FiltersContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(PuzzleScriptParser.COLON, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FiltersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PuzzleScriptListener ) ((PuzzleScriptListener)listener).enterFilters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PuzzleScriptListener ) ((PuzzleScriptListener)listener).exitFilters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PuzzleScriptVisitor ) return ((PuzzleScriptVisitor<? extends T>)visitor).visitFilters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FiltersContext filters() throws RecognitionException {
		FiltersContext _localctx = new FiltersContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_filters);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T__0);
			setState(82);
			match(COLON);
			setState(83);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> BLANK_LINE() { return getTokens(PuzzleScriptParser.BLANK_LINE); }
		public TerminalNode BLANK_LINE(int i) {
			return getToken(PuzzleScriptParser.BLANK_LINE, i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PuzzleScriptListener ) ((PuzzleScriptListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PuzzleScriptListener ) ((PuzzleScriptListener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PuzzleScriptVisitor ) return ((PuzzleScriptVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statements);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(85);
					statement();
					setState(89);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(86);
							match(BLANK_LINE);
							}
							} 
						}
						setState(91);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
					}
					}
					} 
				}
				setState(96);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Token key;
		public Token value;
		public TerminalNode BREAK() { return getToken(PuzzleScriptParser.BREAK, 0); }
		public TerminalNode CONTINUE() { return getToken(PuzzleScriptParser.CONTINUE, 0); }
		public TerminalNode BLANK_LINE() { return getToken(PuzzleScriptParser.BLANK_LINE, 0); }
		public TerminalNode IF() { return getToken(PuzzleScriptParser.IF, 0); }
		public List<ParExpressionContext> parExpression() {
			return getRuleContexts(ParExpressionContext.class);
		}
		public ParExpressionContext parExpression(int i) {
			return getRuleContext(ParExpressionContext.class,i);
		}
		public List<TerminalNode> LBRACE() { return getTokens(PuzzleScriptParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(PuzzleScriptParser.LBRACE, i);
		}
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public List<TerminalNode> RBRACE() { return getTokens(PuzzleScriptParser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(PuzzleScriptParser.RBRACE, i);
		}
		public List<TerminalNode> ELSE_IF() { return getTokens(PuzzleScriptParser.ELSE_IF); }
		public TerminalNode ELSE_IF(int i) {
			return getToken(PuzzleScriptParser.ELSE_IF, i);
		}
		public TerminalNode ELSE() { return getToken(PuzzleScriptParser.ELSE, 0); }
		public TerminalNode FOR() { return getToken(PuzzleScriptParser.FOR, 0); }
		public TerminalNode LPAREN() { return getToken(PuzzleScriptParser.LPAREN, 0); }
		public TerminalNode COMMA() { return getToken(PuzzleScriptParser.COMMA, 0); }
		public TerminalNode IN() { return getToken(PuzzleScriptParser.IN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(PuzzleScriptParser.RPAREN, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(PuzzleScriptParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(PuzzleScriptParser.IDENTIFIER, i);
		}
		public WhenExpressionContext whenExpression() {
			return getRuleContext(WhenExpressionContext.class,0);
		}
		public CallTaskContext callTask() {
			return getRuleContext(CallTaskContext.class,0);
		}
		public CallFunctionContext callFunction() {
			return getRuleContext(CallFunctionContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(PuzzleScriptParser.RETURN, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PuzzleScriptListener ) ((PuzzleScriptListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PuzzleScriptListener ) ((PuzzleScriptListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PuzzleScriptVisitor ) return ((PuzzleScriptVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statement);
		int _la;
		try {
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BREAK:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				match(BREAK);
				}
				break;
			case CONTINUE:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				match(CONTINUE);
				}
				break;
			case BLANK_LINE:
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				match(BLANK_LINE);
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 4);
				{
				setState(100);
				match(IF);
				setState(101);
				parExpression();
				{
				setState(102);
				match(LBRACE);
				setState(103);
				statements();
				setState(104);
				match(RBRACE);
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ELSE_IF) {
					{
					{
					setState(106);
					match(ELSE_IF);
					setState(107);
					parExpression();
					{
					setState(108);
					match(LBRACE);
					setState(109);
					statements();
					setState(110);
					match(RBRACE);
					}
					}
					}
					setState(116);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ELSE) {
					{
					setState(117);
					match(ELSE);
					{
					setState(118);
					match(LBRACE);
					setState(119);
					statements();
					setState(120);
					match(RBRACE);
					}
					}
				}

				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 5);
				{
				setState(124);
				match(FOR);
				setState(125);
				match(LPAREN);
				setState(126);
				((StatementContext)_localctx).key = match(IDENTIFIER);
				setState(127);
				match(COMMA);
				setState(128);
				((StatementContext)_localctx).value = match(IDENTIFIER);
				setState(129);
				match(IN);
				setState(130);
				expression(0);
				setState(131);
				match(RPAREN);
				{
				setState(132);
				match(LBRACE);
				setState(133);
				statements();
				setState(134);
				match(RBRACE);
				}
				}
				break;
			case WHEN:
				enterOuterAlt(_localctx, 6);
				{
				setState(136);
				whenExpression();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 7);
				{
				setState(137);
				callTask();
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 8);
				{
				setState(138);
				callFunction();
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 9);
				{
				setState(139);
				match(RETURN);
				setState(141);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(140);
					expression(0);
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
